--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,47 +1,64 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Jason Merlo at 2022-09-19 18:16:51 -0400 
+%% Created for Jason Merlo at 2023-09-11 13:40:03 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@inproceedings{merlo2023ursigass,
-	award = {Young Scientist Award},
-	abbr = {URSI GASS},
-	selected = {true},
-	abstract = {Picosecond-level timing synchronization with wireless frequency transfer is presented in a non-line-of-sight (NLoS) environment using two software-defined radios (SDRs). Using a spectrally sparse pulsed two-tone waveform, high accuracy timing synchronization is achieved. Frequency synchronization is achieved via a continuous 10 MHz two- tone waveform transmitted between nodes which is demodulated by a self-mixing circuit to recover the 10 MHz reference signal used to discipline the local oscillator on the receiving SDR. Total time synchronization, beamforming, and phase accuracies of 8.84 ps, 23.17 ps, and 10°, respectively, were achieved enabling modulation bandwidths of up to 4.3 Gb/s at a carrier frequency of up to 1.33 GHz.},
+
+
+@inproceedings{merlo2023grcon,
+	abbr = {GRCon},
+	abstract = {Timing synchronization plays a critical role in many high performance software defined radio applications. However, currently, to achieve the level of synchronization required to perform distributed open loop beamforming, cabled techniques such as precision PPS fanout buffers or White Rabbit must be used to align the system clocks to within a small fraction of a sample. However, we have recently presented techniques to achieve picosecond-level synchronization wirelessly for distributed phased array beamforming accomplished using the RF front-end on Ettus X300 software defined radios. This talk will address the waveform design, time delay estimation and refinement process, and software implementation strategies used to achieve this high level of performance using host-controlled processing in GNU Radio.},
+	address = {Tempe, Arizona, USA},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	booktitle = {GNU Radio Conference (GRCon)},
+	date-added = {2023-09-11 13:17:37 -0400},
+	date-modified = {2023-09-11 13:40:03 -0400},
+	link = {https://events.gnuradio.org/event/21/contributions/413/},
+	month = {August},
+	title = {High Accuracy Wireless Timing Synchronization Using Software Defined Radios},
+	url = {https://events.gnuradio.org/event/21/contributions/413/},
+	video = {https://youtu.be/hiLcz9FoxKw?t=18722},
+	website = {https://events.gnuradio.org/event/21/contributions/413/},
+	year = {2023}}
+
+@inproceedings{merlo2023ursigass,
+	abbr = {URSI GASS},
+	abstract = {Picosecond-level timing synchronization with wireless frequency transfer is presented in a non-line-of-sight (NLoS) environment using two software-defined radios (SDRs). Using a spectrally sparse pulsed two-tone waveform, high accuracy timing synchronization is achieved. Frequency synchronization is achieved via a continuous 10 MHz two- tone waveform transmitted between nodes which is demodulated by a self-mixing circuit to recover the 10 MHz reference signal used to discipline the local oscillator on the receiving SDR. Total time synchronization, beamforming, and phase accuracies of 8.84 ps, 23.17 ps, and 10$\,^{\circ}$, respectively, were achieved enabling modulation bandwidths of up to 4.3 Gb/s at a carrier frequency of up to 1.33 GHz.},
+	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	award = {Young Scientist Award},
 	booktitle = {International Union of Radio Scientists General Assembly},
 	month = {August},
 	pdf = {YSASummaryMerloJason.pdf},
+	selected = {true},
 	slides = {C03-4_1020_Merlo.pdf},
 	title = {Picosecond Non-Line-of-Sight Wireless Time and Frequency Synchronization for Coherent Distributed Aperture Antenna Arrays},
 	year = {2023}}
 
-@ARTICLE{randall2023awpl,
-  abbr={IEEE AWPL},
-  abstract={A new method of obtaining directional modulation by implementing antenna array dynamics is proposed. An asymmetric switching feed structure is implemented in a two-element array that supports a static antenna pattern in a desired direction while adding sufficient complex modulation at other angles to mitigate the transfer of information. The dynamic antenna array feeds are calibrated to be in-phase and have a signal feed amplitude ratio of approximately 6.15±0.1 dB through the design of an asymmetrical Wilkinson divider. The antenna system comprises of a two-state switching matrix using a double pole double throw (DPDT) RF switch. Secure communication capability is demonstrated in simulation and experiment by a 2.5 GHz two-element patch array. The communication system uses a 16-QAM single-carrier signal transmitting 48 kbits in a pseudo-random bit sequence (PRBS) at a rate of 4 Mbits/s. The DPDT switch was synchronized to the transmitter symbol rate of 1 MHz. To isolate the effects of the phase dynamics, the communication system was operating at an SNR of 33 dB, thus transmitting high power to all directions. A low bit error ratio (BER) of <10^−3 is demonstrated at the desired transmission direction 13, with higher BER outside this region. A measurement of a static antenna yielded BER =0 in all directions; thus, the bit errors and narrow 13 information beamwidth were due exclusively to the antenna array dynamics. Performance metrics of this directional modulation technique are compared against previous literature for the reader. Further insights to spurious signals and mitigation are taken into consideration for the equipment and instrumentation of a narrowband signal to validate the technique as a viable “black-box” system implementation.},
-  author={Randall, Jacob R. and Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
-  journal={IEEE Antennas and Wireless Propagation Letters}, 
-  title={A Dynamic Array Using Spatial Amplitude Modulation with an Asymmetric Wilkinson Power Divider for Secure Wireless Applications}, 
-  year={2023},
-  month={August},
-  volume={},
-  number={},
-  pages={1-5},
-  ieee={https://doi.org/10.1109/LAWP.2023.3310911},
-  doi={10.1109/LAWP.2023.3310911}}
+@article{randall2023awpl,
+	abbr = {IEEE AWPL},
+	abstract = {A new method of obtaining directional modulation by implementing antenna array dynamics is proposed. An asymmetric switching feed structure is implemented in a two-element array that supports a static antenna pattern in a desired direction while adding sufficient complex modulation at other angles to mitigate the transfer of information. The dynamic antenna array feeds are calibrated to be in-phase and have a signal feed amplitude ratio of approximately 6.15$\pm$0.1 dB through the design of an asymmetrical Wilkinson divider. The antenna system comprises of a two-state switching matrix using a double pole double throw (DPDT) RF switch. Secure communication capability is demonstrated in simulation and experiment by a 2.5 GHz two-element patch array. The communication system uses a 16-QAM single-carrier signal transmitting 48 kbits in a pseudo-random bit sequence (PRBS) at a rate of 4 Mbits/s. The DPDT switch was synchronized to the transmitter symbol rate of 1 MHz. To isolate the effects of the phase dynamics, the communication system was operating at an SNR of 33 dB, thus transmitting high power to all directions. A low bit error ratio (BER) of <10^−3 is demonstrated at the desired transmission direction 13, with higher BER outside this region. A measurement of a static antenna yielded BER =0 in all directions; thus, the bit errors and narrow 13 information beamwidth were due exclusively to the antenna array dynamics. Performance metrics of this directional modulation technique are compared against previous literature for the reader. Further insights to spurious signals and mitigation are taken into consideration for the equipment and instrumentation of a narrowband signal to validate the technique as a viable ``black-box'' system implementation.},
+	author = {Randall, Jacob R. and Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
+	doi = {10.1109/LAWP.2023.3310911},
+	ieee = {https://doi.org/10.1109/LAWP.2023.3310911},
+	journal = {IEEE Antennas and Wireless Propagation Letters},
+	month = {August},
+	pages = {1-5},
+	title = {A Dynamic Array Using Spatial Amplitude Modulation with an Asymmetric Wilkinson Power Divider for Secure Wireless Applications},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1109/LAWP.2023.3310911}}
 
 @inproceedings{merlo2023aps,
-	award = {SPC Honorable Mention},
 	abbr = {IEEE AP-S/URSI},
-	selected = {true},
-	abstract = {We present a two node wideband wireless distributed antenna array operating from 3.1–3.3 GHz on software-deﬁned radios (SDRs). To synthesize the total bandwidth of 300 MHz, a 100 MHz bandwidth signal was used over multiple frequency steps, with the carrier frequency re-tuned between each pulse. The nodes were wirelessly synchronized using a high-accuracy two-way time transfer technique which was also used to determine the inter-node range for beamforming. A total beamforming bias ± standard deviation of 62.46 ± 45.74 ps and 0.27 ± 2.28°at the target beamforming angle at a range of 35.5 m was achieved.},
+	abstract = {We present a two node wideband wireless distributed antenna array operating from 3.1--3.3 GHz on software-defined radios (SDRs). To synthesize the total bandwidth of 300 MHz, a 100 MHz bandwidth signal was used over multiple frequency steps, with the carrier frequency re-tuned between each pulse. The nodes were wirelessly synchronized using a high-accuracy two-way time transfer technique which was also used to determine the inter-node range for beamforming. A total beamforming bias $\pm$ standard deviation of 62.46 $\pm$ 45.74 ps and 0.27 $\pm$ 2.28$\,^{\circ}$at the target beamforming angle at a range of 35.5 m was achieved.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	award = {SPC Honorable Mention},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
 	month = {July},
 	pdf = {aps23_distributed_wideband_beamforming.pdf},
+	selected = {true},
 	slides = {TU-A1.1A.9.Jason.FINAL.pdf},
 	title = {Wireless Time and Phase Alignment for Wideband Beamforming in Distributed Phased Arrays},
 	year = {2023}}
@@ -56,108 +73,102 @@
 	year = {2023}}
 
 @article{schlegel2023coherent,
-  abbr={IEEE MWTL},
-  abstract={We present a distributed microwave radar system operating at 4.8 GHz that uses wireless frequency transfer and internode ranging. We implement wireless frequency alignment (syntonization) using a sparse two-tone signal transmitted from the primary node and a self-mixing receiver on the secondary node. The primary node acts as a distributed radar transmitter, sending a linear frequency-modulated (LFM) waveform downrange, toward the target. There is also a repeater that retransmits an LFM from the secondary node that is used to estimate the separation of the node to correct for the phase rotation of the frequency signal due to propagation. The secondary node also locks its oscillator to the primary node and captures the signal reflected from the scene. We demonstrate the ability of the fully wireless distributed radar system to perform bistatic ranging in an outdoor environment at 4.8 GHz using software-defined radios (SDRs). Measurements to a wall yielded a maximum standard deviation of 1.7 cm and a maximum bias of 14.9 cm.},
-  author={Schlegel, Anton and Merlo, Jason M. and Nanzer, Jeffrey A.},
-  journal={IEEE Microwave and Wireless Technology Letters}, 
-  title={Coherent Distributed Bistatic Radar Using Wireless Frequency Syntonization and Internode Ranging}, 
-  year={2023},
-  volume={},
-  number={},
-  pages={1-4},
-  ieee={https://doi.org/10.1109/LMWT.2023.3283918}}
-
+	abbr = {IEEE MWTL},
+	abstract = {We present a distributed microwave radar system operating at 4.8 GHz that uses wireless frequency transfer and internode ranging. We implement wireless frequency alignment (syntonization) using a sparse two-tone signal transmitted from the primary node and a self-mixing receiver on the secondary node. The primary node acts as a distributed radar transmitter, sending a linear frequency-modulated (LFM) waveform downrange, toward the target. There is also a repeater that retransmits an LFM from the secondary node that is used to estimate the separation of the node to correct for the phase rotation of the frequency signal due to propagation. The secondary node also locks its oscillator to the primary node and captures the signal reflected from the scene. We demonstrate the ability of the fully wireless distributed radar system to perform bistatic ranging in an outdoor environment at 4.8 GHz using software-defined radios (SDRs). Measurements to a wall yielded a maximum standard deviation of 1.7 cm and a maximum bias of 14.9 cm.},
+	author = {Schlegel, Anton and Merlo, Jason M. and Nanzer, Jeffrey A.},
+	ieee = {https://doi.org/10.1109/LMWT.2023.3283918},
+	journal = {IEEE Microwave and Wireless Technology Letters},
+	pages = {1-4},
+	title = {Coherent Distributed Bistatic Radar Using Wireless Frequency Syntonization and Internode Ranging},
+	year = {2023}}
 
 @inproceedings{merlo2023wirelessly,
 	abbr = {IEEE IMS},
-	award = {SPC First Place},
-	selected = {true},
-	ieee = {https://doi.org/10.1109/IMS37964.2023.10188022},
-	abstract = {Wirelessly coordinated distributed arrays will have a signiﬁcant impact in next generation communications and sensing systems in coming years. However, to achieve high modulation bandwidths and carrier frequencies, timing and frequency transfer must be synchronized to small fractions of the modulation and carrier periods respectively. In this work, we demonstrate coordination and beamforming of a wireless distributed antenna array at 1 GHz in a cluttered outdoor environment achieving a coherent gain of 95.4% and beamforming accuracy of 27.6 ps over a 41 m channel.},
+	abstract = {Wirelessly coordinated distributed arrays will have a significant impact in next generation communications and sensing systems in coming years. However, to achieve high modulation bandwidths and carrier frequencies, timing and frequency transfer must be synchronized to small fractions of the modulation and carrier periods respectively. In this work, we demonstrate coordination and beamforming of a wireless distributed antenna array at 1 GHz in a cluttered outdoor environment achieving a coherent gain of 95.4% and beamforming accuracy of 27.6 ps over a 41 m channel.},
 	author = {Jason M. {Merlo} and Anton {Schlegel} and Jeffrey A. {Nanzer}},
+	award = {SPC First Place},
 	booktitle = {IEEE/MTT-S International Microwave Symposium (IMS)},
+	ieee = {https://doi.org/10.1109/IMS37964.2023.10188022},
+	month = {June},
 	pdf = {ims23_distributed_time_frequency_transfer_and_beamforming_v1.1.pdf},
+	selected = {true},
 	slides = {Tu2C_3_Merlo_Jason_finalslides_v2.pdf},
 	title = {High Accuracy Wireless Time-Frequency Transfer For Distributed Phased Array Beamforming},
-	month = {June},
 	year = {2023}}
 
-@ARTICLE{arisheh2023tap,
-  abbr={IEEE TAP},
-  abstract={We introduce a new technique for secure wireless applications using a single dynamic antenna. The dynamic antenna supports a constantly and rapidly changing current distribution that generates a radiation pattern that is static in a desired direction and dynamic elsewhere. This imparts additional modulation on the signal and obscures information transmitted or received outside of the information beam, thus achieving directional modulation. Dynamic currents are supported by a single feed that is switched between separate ports on a single antenna, generating two different radiation patterns without changing the physical shape of the antenna. We introduce the theoretical concept by exploring an ideal complex dynamic radiation pattern that remains static in a narrow desired direction and is dynamic elsewhere. The impact on the transmission of information is analyzed, showing that the information beam narrows as the modulation order increases, and design constraints on the spatial width of the information beam as a function of modulation format are determined. We design and analyze a 2.3 GHz two-state dynamic dipole antenna and experimentally demonstrate secure wireless transmission. We demonstrate the ability to change the information beamwidth and steer the information beam experimentally in real time, and to maintain high throughput in the information beam while obscuring the information elsewhere. In contrast to multiport or array-based antennas, our approach introduces a novel rapidly switched single-element technique for secure wireless applications that can be used independently from the rest of the wireless system, essentially operating as a “black box” for an additional layer of security.},
-  author={Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
-  journal={IEEE Transactions on Antennas and Propagation}, 
-  title={Design of a Single-Element Dynamic Antenna for Secure Wireless Applications}, 
-  year={2023},
-  ieee={https://doi.org/10.1109/TAP.2023.3288013},
-  volume={},
-  number={},
-  pages={1-1},
-  doi={10.1109/TAP.2023.3288013}}
-
+@article{arisheh2023tap,
+	abbr = {IEEE TAP},
+	abstract = {We introduce a new technique for secure wireless applications using a single dynamic antenna. The dynamic antenna supports a constantly and rapidly changing current distribution that generates a radiation pattern that is static in a desired direction and dynamic elsewhere. This imparts additional modulation on the signal and obscures information transmitted or received outside of the information beam, thus achieving directional modulation. Dynamic currents are supported by a single feed that is switched between separate ports on a single antenna, generating two different radiation patterns without changing the physical shape of the antenna. We introduce the theoretical concept by exploring an ideal complex dynamic radiation pattern that remains static in a narrow desired direction and is dynamic elsewhere. The impact on the transmission of information is analyzed, showing that the information beam narrows as the modulation order increases, and design constraints on the spatial width of the information beam as a function of modulation format are determined. We design and analyze a 2.3 GHz two-state dynamic dipole antenna and experimentally demonstrate secure wireless transmission. We demonstrate the ability to change the information beamwidth and steer the information beam experimentally in real time, and to maintain high throughput in the information beam while obscuring the information elsewhere. In contrast to multiport or array-based antennas, our approach introduces a novel rapidly switched single-element technique for secure wireless applications that can be used independently from the rest of the wireless system, essentially operating as a ``black box'' for an additional layer of security.},
+	author = {Arisheh, Amer Abu and Merlo, Jason M. and Nanzer, Jeffrey A.},
+	doi = {10.1109/TAP.2023.3288013},
+	ieee = {https://doi.org/10.1109/TAP.2023.3288013},
+	journal = {IEEE Transactions on Antennas and Propagation},
+	pages = {1-1},
+	title = {Design of a Single-Element Dynamic Antenna for Secure Wireless Applications},
+	year = {2023},
+	bdsk-url-1 = {https://doi.org/10.1109/TAP.2023.3288013}}
 
 @inproceedings{merlo2023joint,
 	abbr = {IEEE RadarConf},
-	award = {Invited},
-	selected = {true},
-	abstract = {In this work we demonstrate an efﬁcient technique for the registration and compositing of multiple automotive synthetic aperture radar (SAR) images as a step towards distributed SAR imaging. Through the use of an efﬁcient sub-pixel Fourier-based iterative correlation and reﬁnement technique, sub-sections of the overall SAR images are aligned. Because only small sub-regions of the full SAR images are aligned at a time, this technique inherently compensates for accelerations experienced when sampling the synthetic aperture, by assuming a quasi-constant velocity over small sub-regions of the image. Because the image fusion is performed after image formation, this technique lends itself well to a distributed architecture where the image formation is performed on-vehicle and transferred to other vehicles or a centralized cloud processor where images from other vehicles can be aggregated. Finally, because the registration of sub-regions of the SAR images are performed, the registration alignment vector can be used as a odometry provider to improve vehicle odometry estimates; if a metrology grade SAR map is used as reference, a globally reference position estimate could be performed.},
+	abstract = {In this work we demonstrate an efficient technique for the registration and compositing of multiple automotive synthetic aperture radar (SAR) images as a step towards distributed SAR imaging. Through the use of an efficient sub-pixel Fourier-based iterative correlation and refinement technique, sub-sections of the overall SAR images are aligned. Because only small sub-regions of the full SAR images are aligned at a time, this technique inherently compensates for accelerations experienced when sampling the synthetic aperture, by assuming a quasi-constant velocity over small sub-regions of the image. Because the image fusion is performed after image formation, this technique lends itself well to a distributed architecture where the image formation is performed on-vehicle and transferred to other vehicles or a centralized cloud processor where images from other vehicles can be aggregated. Finally, because the registration of sub-regions of the SAR images are performed, the registration alignment vector can be used as a odometry provider to improve vehicle odometry estimates; if a metrology grade SAR map is used as reference, a globally reference position estimate could be performed.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
+	award = {Invited},
 	booktitle = {IEEE Radar Conference (RadarConf)},
-	pdf = {radarconf_2023_multi_pass_sar_fusion.pdf},
 	ieee = {https://doi.org/10.1109/RadarConf2351548.2023.10149757},
+	month = {May},
+	pdf = {radarconf_2023_multi_pass_sar_fusion.pdf},
+	selected = {true},
 	slides = {radarconf_2023_multi_pass_sar_presentation.pdf},
 	title = {Multi-Pass Automotive Synthetic Aperture Radar Image Fusion},
-	month = {May},
 	year = {2023}}
 
 @article{bhattacharyya2023multiobjective,
-  abbr = {IEEE MWTL},
-  abstract = {We demonstrate the efficacy of distributed microwave multiobjective beamforming at ranges near field to the array using an optimization algorithm and wireless frequency alignment (syntonization). While considerable research has recently been devoted to distributed phased array coordination, the ability to steer signals to locations close to the array in open-loop (feedback-free) systems has not been demonstrated. In this work, we apply a traditional far-field beamforming algorithm to a set of distributed antennas that are wirelessly syntonized. We demonstrate multiobjective beamforming at 0.9 GHz using software-defined radios (SDRs) in a distributed array steering either two beams (focii) or one beam and one null. This work demonstrates the feasibility of a critical part of future distributed beamforming systems that, when combined with other coordination technologies, will support coherent beamforming in widely distributed wireless systems.},
-  author={Bhattacharyya, Ahona and Merlo, Jason M. and Mghabghab, Serge R. and Schlegel, Anton and Nanzer, Jeffrey A.},
-  journal={IEEE Microwave and Wireless Technology Letters}, 
-  title={Multiobjective Distributed Array Beamforming in the Near Field Using Wireless Syntonization}, 
-  year={2023},
-  volume={},
-  number={},
-  pages={1-4},
-  ieee={https://ieeexplore.ieee.org/abstract/document/10035952}}
-
+	abbr = {IEEE MWTL},
+	abstract = {We demonstrate the efficacy of distributed microwave multiobjective beamforming at ranges near field to the array using an optimization algorithm and wireless frequency alignment (syntonization). While considerable research has recently been devoted to distributed phased array coordination, the ability to steer signals to locations close to the array in open-loop (feedback-free) systems has not been demonstrated. In this work, we apply a traditional far-field beamforming algorithm to a set of distributed antennas that are wirelessly syntonized. We demonstrate multiobjective beamforming at 0.9 GHz using software-defined radios (SDRs) in a distributed array steering either two beams (focii) or one beam and one null. This work demonstrates the feasibility of a critical part of future distributed beamforming systems that, when combined with other coordination technologies, will support coherent beamforming in widely distributed wireless systems.},
+	author = {Bhattacharyya, Ahona and Merlo, Jason M. and Mghabghab, Serge R. and Schlegel, Anton and Nanzer, Jeffrey A.},
+	ieee = {https://ieeexplore.ieee.org/abstract/document/10035952},
+	journal = {IEEE Microwave and Wireless Technology Letters},
+	pages = {1-4},
+	title = {Multiobjective Distributed Array Beamforming in the Near Field Using Wireless Syntonization},
+	year = {2023}}
 
 @article{merlo2022wireless,
 	abbr = {IEEE T-MTT},
-	selected = {true},
 	abstract = {Distributed antenna arrays have been proposed for many applications ranging from space-based observatories to automated vehicles. Achieving good performance in distributed antenna systems requires stringent synchronization at the wavelength and information level to ensure that the transmitted signals arrive coherently at the target, or that scattered and received signals can be appropriately processed via distributed algorithms. In this paper we address the challenge of high precision time synchronization to align the operations of elements in a distributed antenna array and to overcome time-varying bias between platforms due to oscillator drift. We use a spectrally sparse two-tone waveform, which obtains approximately optimal time estimation accuracy, in a two-way time transfer process. We also describe a technique for determining the true time delay using the ambiguous two-tone matched filter output, and we compare the time synchronization precision of the two-tone waveform with the more common linear frequency modulation (LFM) waveform. We experimentally demonstrate wireless time synchronization using a single pulse 40MHz two-tone waveform over a 90cm 5.8GHz wireless link in a laboratory setting, obtaining a timing precision of 2.26ps.},
 	archiveprefix = {arXiv},
 	arxiv = {2206.08457},
-	journal={IEEE Transactions on Microwave Theory and Techniques}, 
 	author = {Jason M. {Merlo} and Serge R. {Mghabghab} and Jeffrey A. {Nanzer}},
+	date-modified = {2023-09-11 13:22:32 -0400},
 	eprint = {2206.08457},
 	ieee = {https://doi.org/10.1109/TMTT.2022.3227878},
+	journal = {IEEE Transactions on Microwave Theory and Techniques},
+	month = {December},
 	pdf = {wireless_time_frequency_synchronization_2022.pdf},
 	primaryclass = {eess.SP},
+	selected = {true},
 	title = {Wireless Picosecond Time Synchronization for Distributed Antenna Arrays},
 	year = {2022}}
 
-
 @article{mukerjee2022microwave,
 	abbr = {IEEE JMW},
-	author = {Mukerjee, Saptarshi and Doroshewitz, John and Merlo, Jason M. and Oakley, Christopher and Udpa, Lalita and MacFarlane, David and Huff, Emily and Nanzer, Jeffrey A.},
 	abstract = {A healthy urban forest is important to improve both human health and overall environmental quality. There is currently a lack in technology that has the ability to evaluate living trees in their natural environment without invasive destructive sampling. This work presents a cost-effective, real-time microwave tomography system for practical forestry applications. The scattering measurement system is designed using wide band microstrip monopole antennas (1--5 GHz) and coupled to a switching matrix and a controlling software for automated real-time data collection. A time reversal signal processing algorithm is developed for performing imaging, based on the measurements. The imaging system is initially validated by imaging simple cylindrical targets and finally utilized for imaging defects in different tree trunk samples. Preliminary experimental results demonstrate the practicality, novelty and benefits of this approach for forestry imaging applications.},
-	month = {September},
+	author = {Mukerjee, Saptarshi and Doroshewitz, John and Merlo, Jason M. and Oakley, Christopher and Udpa, Lalita and MacFarlane, David and Huff, Emily and Nanzer, Jeffrey A.},
 	doi = {10.1109/JMW.2022.3199194},
+	ieee = {https://doi.org/10.1109/JMW.2022.3199194},
 	journal = {IEEE Journal of Microwaves},
+	month = {September},
 	pages = {1-12},
 	title = {A Microwave Tomography System Using Time-Reversal Imaging for Forestry Applications},
 	year = {2022},
-	ieee = {https://doi.org/10.1109/JMW.2022.3199194}}
+	bdsk-url-1 = {https://doi.org/10.1109/JMW.2022.3199194}}
 
 @inproceedings{merlo2022aps,
 	abbr = {IEEE AP-S/URSI},
 	abstract = {A method for high accuracy time synchronization of nodes in a distributed antenna array that achieves time alignment accuracy of less than 10 ps is demonstrated. This technique utilizes a two-step process, first performing coarse time synchronization using a conventional pulse-per-second-based time alignment to distribute a global timestamp on device startup, then performing a refinement process using a pulsed dual-tone waveform that is matched filtered and interpolated for fine delay estimation. This process is demonstrated experimentally using software-defined radio nodes separated by 1.2 m using a carrier of 5.8 GHz and a dual-tone waveform with 50 MHz bandwidth.},
 	author = {Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
-	month = {July},
 	ieee = {https://doi.org/10.1109/AP-S/USNC-URSI47032.2022.9887217},
+	month = {July},
 	pdf = {apsursi_2022_wireless_time_transfer.pdf},
 	slides = {aps_ursi_2022_time_transfer_slides.pdf},
 	title = {High Accuracy Wireless Time Synchronization for Distributed Antenna Arrays},
@@ -168,14 +179,13 @@
 	abstract = {We present the design and measurement of a switched dipole antenna for directional modulation in a single antenna via radiation pattern dynamics. The antenna is fed by a single port, the output of which is fed to two locations on the dipole. By switching between the two states, the complex radiation pattern is quasi-static within a secure region in the mainlobe, and dynamic outside of the secure region. We show that the complex pattern dynamics outside the secure region impart additional modulation onto the radiation pattern that will distort transmitted or received data. We present the design of the dynamic pattern antenna and measured radiation patterns of the two antenna states. We numerically characterize the secure wireless capability through calculation of the bit-error-ratio on various digital modulations in communications, demonstrating the ability to maintain a small secure region.},
 	author = {Amer Abu {Arisheh} and Jason M. {Merlo} and Jeffrey A. {Nanzer}},
 	booktitle = {IEEE International Symposium on Antennas and Propagation and USNC-URSI Radio Science Meeting},
-	month = {July},
 	ieee = {https://doi.org/10.1109/AP-S/USNC-URSI47032.2022.9887173},
+	month = {July},
 	title = {A Dynamic Pattern Dipole Antenna for Secure Wireless Communications},
 	year = {2022}}
 
 @article{merlo2021sar,
 	abbr = {IEEE TVT},
-	selected = {true},
 	abstract = {Due to the rapid increase in 76 GHz automotive spectrum use in recent years, wireless interference is becoming a legitimate area of concern. However, the recent rise in interest of automated vehicles (AVs) has also spurred new growth and adoption of low frequency vehicle-to-everything (V2X) communications in and around the 5.8 GHz unlicensed bands, opening the possibility for communications spectrum reuse in the form of joint radar-communications (JRC). In this work, we present a low frequency 5.9 GHz side-looking polarimetric synthetic aperture radar (SAR) for automotive use, utilizing a ranging waveform in a common low frequency V2X communications band. A synthetic aperture technique is employed to address the angular resolution concerns commonly associated with radars at lower frequencies. Three side-looking fully polarimetric SAR images in various urban scenes are presented and discussed to highlight the unique opportunities for landmark inference afforded through measurement of co- and cross-polarized scattering.},
 	archiveprefix = {arXiv},
 	arxiv = {2110.14114},
@@ -185,6 +195,7 @@
 	journal = {IEEE Transactions on Vehicular Technology},
 	pdf = {automotive_sar_2021.pdf},
 	primaryclass = {eess.SP},
+	selected = {true},
 	title = {A C-Band Fully Polarimetric Automotive Synthetic Aperture Radar},
 	year = {2021}}
 
@@ -214,7 +225,6 @@
 
 @article{merlo2021dimensional,
 	abbr = {IEEE T-MTT},
-	selected = {true},
 	abstract = {In this work, a method for directly measuring target velocity in three dimensions using a dual axis correlation interferometric radar is presented. Recent advances have shown that the measurement of a target's angular velocity is possible by correlating the signals measured at spatially diverse aperture locations. By utilizing multiple orthogonal baselines and using conventional Doppler velocity methods to obtain radial velocity, a full three-dimensional velocity vector can be obtained using only three receive antennas and a single transmitter, without the need for tracking. A 41.8 GHz dual axis interferometric radar with a 7.26λ antenna baseline is presented along with measurements of a target moving parallel to the plane of the radar array, and of a target moving with components of both radial and tangential velocity. These experiments achieved total velocity root-mean-square errors of 41.01 mm/s (10.5%) for a target moving along a plane parallel to the array, and 45.07 mm/s (13.5%) for a target moving with components of radial and tangential motion relative to the array; estimated trajectory angle RMSEs of 10.42$\,^{\circ}$ and 5.11$\,^{\circ}$ were achieved for each experiment respectively.},
 	archiveprefix = {arXiv},
 	arxiv = {2011.05512},
@@ -224,6 +234,7 @@
 	journal = {IEEE Transactions on Microwave Theory and Techniques},
 	pdf = {3d_dual_axis_interferometer.pdf},
 	primaryclass = {eess.SP},
+	selected = {true},
 	title = {Three Dimensional Velocity Measurement Using a Dual Axis Millimeter-Wave Interferometric Radar},
 	year = {2021}}
 
@@ -260,8 +271,8 @@
 	pages = {1-6},
 	pdf = {joint_measurement_angle_angular_velocity_interferometer_lfm.pdf},
 	slides = {radarconf_2020_presentation.pdf},
-	video = {https://youtu.be/I69LQExmnB0},
 	title = {Joint Measurement of Target Angle and Angular Velocity Using Interferometric Radar with FM Waveforms},
+	video = {https://youtu.be/I69LQExmnB0},
 	year = {2020}}
 
 @inproceedings{merlo2020dualaxis,
@@ -274,23 +285,23 @@
 	date-added = {2020-11-09 12:45:34 -0500},
 	date-modified = {2020-11-10 21:32:49 -0500},
 	ieee = {https://doi.org/10.1109/IEEECONF35879.2020.9330294},
-	slides = {aps_2020_interferometry_4.pdf},
-	video = {https://youtu.be/k30o_A5V_Gs},
 	month = {July},
 	pdf = {dual-axis_interferometry_for_2d_motion_estimation.pdf},
+	slides = {aps_2020_interferometry_4.pdf},
 	title = {A Dual-Axis Interferometric Radar for Instantaneous 2D Angular Velocity Measurement},
+	video = {https://youtu.be/k30o_A5V_Gs},
 	year = {2020}}
 
 @inproceedings{merlo2020fmcw,
 	abbr = {IEEE AP-S SDC},
-	award = {SDC Second Place},
-	selected = {true},
 	abstract = {The design of a portable frequency-modulated continuous-wave (FMCW) radar system for detecting and localizing drones is discussed in this report. The system utilized the 5.8 GHz industrial, scientific and medical band and occupied a 100 MHz bandwidth. The system is able to localize drones at a range of 10 m or more. The theory behind FMCW radar localization is explained, and an algorithm for detecting the drone response is presented. The design considerations of a radar board and transmit and receive patch antenna arrays are discussed. We include experimental measurements of tracking a drone.},
 	author = {Jason M. {Merlo} and Stavros {Vakalis} and Cory {Hilton} and Jacob {Randall}},
+	award = {SDC Second Place},
 	booktitle = {IEEE International Symposium on Antennas and Propagation Student Design Competition},
 	code = {https://gitlab.msu.edu/delta/aps2020-competition},
 	month = {July},
 	pdf = {APS_SDC_2020.pdf},
+	selected = {true},
 	slides = {aps_sdc_full_presentation.pdf},
 	supp = {aps_radar_build_instructions.pdf},
 	title = {5.8-GHz FMCW Radar System for Drone Tracking},
