Updated slides for grcon

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -22,6 +22,7 @@
 	url = {https://events.gnuradio.org/event/21/contributions/413/},
 	video = {https://youtu.be/hiLcz9FoxKw?t=18722},
 	website = {https://events.gnuradio.org/event/21/contributions/413/},
+	slides = {2023_grcon_merlo.pdf},
 	year = {2023}}
 
 @inproceedings{merlo2023ursigass,
